--- a/src/app/workspace/workspace-defult/workspace-defult.component.html
+++ b/src/app/workspace/workspace-defult/workspace-defult.component.html
@@ -1,29 +1,3 @@
-
-<div class="container-fluid">
-
-
-  <div class="row-fluid">
-    <div class="span12">
-      <div class="row-fluid">
-        <div class="span12">
-          <app-top-menu></app-top-menu>
-        </div>
-      </div>
-      <div class="row-fluid">
-        <div class="span3">
-          <app-left-nav></app-left-nav>
-        </div>
-        <div class="span9">
-          <router-outlet></router-outlet>
-        </div>
-      </div>
-      <div class="row-fluid">
-        <div class="span12">
-          <app-footer-info></app-footer-info>
-        </div>
-      </div>
-    </div>
-  </div>
-
-
+<div class="container body">
+  <app-left-nav></app-left-nav>
 </div>
